# web12

web12/: main.py  pyproject.toml
web12/api/: users.py
web12/depenedencies/: auth.py  database.py
web12/models/: users.py
web12/repository/: user.py
web12/schemas/: user.py
web12/services/: todos.py  users.py
