[tool.poetry]
name = "app"
version = "0.0.1"
description = ""
authors = ["Bodya3836 <kotdanon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
sqlalchemy = "^2.0.25"
psycopg2 = "^2.9.9"
myapplication = "^0.1.0"
path = "^16.9.0"
alembic = "^1.13.1"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
